fixing dragging on mobile

--- a/src/components/Board/Board.module.scss
+++ b/src/components/Board/Board.module.scss
@@ -3,4 +3,8 @@
   user-select: none;
   gap: var(--letter-gap);
   align-self: center;
+  user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
